Update references according to updated post model

--- a/templates/account/snippets/already_logged_in.html
+++ b/templates/account/snippets/already_logged_in.html
@@ -2,6 +2,7 @@
 {% load account %}
 
 {% user_display user as user_display %}
+<section>
 <div class="container login-block">
     <div class="row">
         <div class="col-md-6 offset-md-3 d-flex flex-column justify-content-center">
@@ -10,3 +11,4 @@
         </div>
     </div>
 </div>
+</section>
