--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,41 +10,46 @@
                 {% if "placeholder" in profile.userpic.url %}
                 <img style="opacity: 0.4; scale: 0.6;" src="{% static 'assets/img/grateful.png' %}">
                 {% else %}
-                {% cloudinary profile.userpic height=350 width=350 crop="crop" radius="max" gravity="face" %}
+                {% cloudinary profile.userpic height=350 width=350 crop="fill" radius="max" gravity="face" %}
                 {% endif %}
             </div>
             <div class="col-lg-8 ">
                 <h2>{{ profile.user }} {% if profile.user == request.user %} <a href="{% url 'users:update_profile' profile.pk %}" class="link-primary"><i class='bx bx-pencil' ></i></a>{% endif %}</h2>
                 <hr>
-                <p class="subtitle text-muted p"><i class='bx bx-map'></i> {{ profile.country.name }}
+                <p class="subtitle text-muted p ms-2"><i class='bx bx-map'></i> {{ profile.country.name }}
                     {% if profile.city != "" %}
                     , {{ profile.city}}
                     {% endif %}
                 </p>
-                <div class="author subtitle p">Languages: {{ profile.languages }}</div>
+                <div class="author subtitle p ms-2">Languages: {{ profile.languages }}</div>
                 <hr>
-                <div class="author subtitle p">About me:</div>
+                <div class="author subtitle p ms-2 mb-5">About me:
                 <p>{{ profile.bio }}</p>
+            </div>
                 {% if profile.user != request.user %}
                 <button type="button" class="btn btn-primary">Contact {{profile.user}}</button>
                 {% else %}
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle btn-warning" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Saved posts
-                    </button>
-                    <ul class="dropdown-menu">
-                        {% for bookmark in user.userprofile.bookmarks.all %}
-                        <li><a class="dropdown-item" href="{% url 'main:full' bookmark.slug %}">{{bookmark}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                <div class="accordion accordion" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed fw-bold link-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Saved posts
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">                        
+                            {% for bookmark in user.userprofile.bookmarks.all %}
+                            <p><i class='bx bx-bookmarks' ></i> <a class="link-secondary" href="{% url 'main:full' bookmark.slug %}">{{bookmark}}</a></p>
+                            {% endfor %}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 {% endif %}
             </div>
-
-
-
         </div>
     </div>
 </section>
 
 {% endblock %}
+
