--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -45,6 +45,7 @@
     
             </div>
           </form>
+          <a href="{% url 'account_reset_password' %}">Forgot your password?</a>
         </div>
       </div>
     </div>
